[package]
name = "ruffly"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32.1"

egui_dock = "0.17.0"
egui = { version = "0.32.3", features = ["serde"] }

serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"

rfd = "0.15.4"
swf = "0.2.2"
quick-xml = "0.38.3"
zip = "5.1.1"
egui_ltreeview = "0.5.3"
